--- a/UrbanAirshipPlugin/AndroidManifest.xml
+++ b/UrbanAirshipPlugin/AndroidManifest.xml
@@ -3,81 +3,20 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <!-- REQUIRED for Urban Airship -->
-	<uses-permission android:name="android.permission.INTERNET" />
-	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-	
-	<!-- Keeps the processor from sleeping when a message is received. -->
-	<uses-permission android:name="android.permission.WAKE_LOCK" />
+    <application>
 
-	<!-- REQUIRED PERMISSIONS for GCM -->
-	<uses-permission android:name="android.permission.GET_ACCOUNTS" />
-	<!-- GCM requires a Google account. -->
-	<uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+		<receiver android:name="com.adenda.plugin.urbanairship.AdendaAirshipReceiver"
+				  android:exported="false">
 
-    <uses-sdk
-        android:minSdkVersion="11"
-        android:targetSdkVersion="22" />
-    
-    <application
-		android:name="com.adenda.plugin.urbanairship.AdendaUrbanAirshipApplication">
-	  
-	    <!-- REQUIRED for Urban Airship Push. The priority is important to be set lower than the
-		application's push intent receiver in order for the push intent receiver to handle push intents
-		before the core receiver. This allows the application to launch any activities before Urban
-		Airship performs any actions or falls back to launching the application launch intent. -->
-		<receiver android:name="com.urbanairship.CoreReceiver"
-		          android:exported="false">
-		</receiver>
-		
-		<!-- REQUIRED for Urban Airship -->
-		<service android:name="com.urbanairship.push.PushService" android:label="Push Notification Service" />
-		
-		<!-- Required for analytics -->
-		<service android:name="com.urbanairship.analytics.EventService" android:label="Event Service" />
-		
-		<!-- Required for Actions -->
-		<service android:name="com.urbanairship.actions.ActionService" />
-		
-		<!-- Required for Rich Push -->
-		<service android:name="com.urbanairship.richpush.RichPushUpdateService" />
-		
-		<!-- OPTIONAL for Urban Airship Location (for segments support) -->
-		<service android:name="com.urbanairship.location.LocationService" android:label="Segments Service" />
-	
-		<!-- REQUIRED for GCM -->
-		<receiver
-		    android:name="com.urbanairship.push.GCMPushReceiver"
-		    android:permission="com.google.android.c2dm.permission.SEND">
+			<intent-filter>
+				<action android:name="com.urbanairship.push.CHANNEL_UPDATED"/>
+				<action android:name="com.urbanairship.push.OPENED"/>
+				<action android:name="com.urbanairship.push.DISMISSED"/>
+				<action android:name="com.urbanairship.push.RECEIVED"/>
+
+				<category android:name="${applicationId}"/>
+			</intent-filter>
 		</receiver>
 
-        <!-- REQUIRED for Google Play Services (GCM)-->
-        <meta-data
-            android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version" />
-
-        <!-- REQUIRED for PlayServiceUtils.handleAnyPlayServicesError to handle Google Play Services recoverable errors. -->
-        <activity
-            android:name="com.urbanairship.google.PlayServicesErrorActivity"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
-
-        <!-- Needed for Action.startActivityForResult -->
-        <activity android:name="com.urbanairship.actions.ActionActivity" />
-
-        <activity android:name="com.urbanairship.CoreActivity" />
-
-        <activity
-            android:name="com.urbanairship.actions.LandingPageActivity"
-            android:exported="false">
-
-            <intent-filter>
-                <action android:name="com.urbanairship.actions.SHOW_LANDING_PAGE_INTENT_ACTION" />
-                <data android:scheme="http" />
-                <data android:scheme="https" />
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-
-        </activity>
 	</application>
 </manifest>
