--- a/UrbanAirshipPlugin/build.gradle
+++ b/UrbanAirshipPlugin/build.gradle
@@ -25,8 +25,13 @@ dependencies {
 }
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion "22.0.1"
+    compileSdkVersion 23
+    buildToolsVersion '23.0.2'
+
+    defaultConfig {
+        minSdkVersion 10
+        targetSdkVersion 23
+    }
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_7
