- Reinstated call to get 12 hour mode for clock, application context in AirshipReceiver to fix crashes. - Added `AdendaApplication` name to `AndroidManifest.xml` - Updated Gradle plugin

--- a/UrbanAirshipPlugin/AndroidManifest.xml
+++ b/UrbanAirshipPlugin/AndroidManifest.xml
@@ -3,7 +3,7 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <application>
+    <application android:name="com.adenda.plugin.urbanairship.AdendaApplication">
 
 		<receiver android:name="com.adenda.plugin.urbanairship.AdendaAirshipReceiver"
 				  android:exported="false">
