--- a/UrbanAirshipPlugin/project.properties
+++ b/UrbanAirshipPlugin/project.properties
@@ -13,6 +13,6 @@
 # Project target.
 target=android-22
 android.library=true
-android.library.reference.1=../../../../Downloads/adt-bundle-mac-x86_64/sdk/extras/google/google_play_services/libproject/google-play-services_lib
-android.library.reference.2=../../AdendaSDK
-android.library.reference.3=../../SharedProjects/ua-android-lib-latest/urbanairship-lib
+android.library.reference.1=../../Adenda/AdendaSDK
+android.library.reference.2=../../Adenda/SharedProjects/urbanairship-sdk-7.1.2
+android.library.reference.3=../../../Downloads/adt-bundle-mac-x86_64/sdk/extras/google/google_play_services/libproject/google-play-services_lib
