- Removed extra call to `addCustomFragmentContent`. Must got misadded during the merge - Added sdk version info in `AndroidManifest.xml`

--- a/UrbanAirshipPlugin/AndroidManifest.xml
+++ b/UrbanAirshipPlugin/AndroidManifest.xml
@@ -2,6 +2,10 @@
     package="com.adenda.plugin.urbanairship"
     android:versionCode="1"
     android:versionName="1.0" >
+    
+    <uses-sdk
+        android:minSdkVersion="9"
+        android:targetSdkVersion="23" />
 
     <application android:name="com.adenda.plugin.urbanairship.AdendaApplication">
 
