--- a/UrbanAirshipPlugin/.gitignore
+++ b/UrbanAirshipPlugin/.gitignore
@@ -21,7 +21,6 @@ Thumbs.db
 # generated files
 bin/
 gen/
-build/
 
 # Local configuration file (sdk path, etc)
 local.properties
@@ -38,3 +37,9 @@ proguard/
 *.ipr
 *.iws
 .idea/
+
+# Android Studio
+.idea
+#.idea/workspace.xml - remove # and delete .idea if it better suit your needs.
+.gradle
+build/
