--- a/UrbanAirshipPlugin/build.gradle
+++ b/UrbanAirshipPlugin/build.gradle
@@ -5,7 +5,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.0'
+        classpath 'com.android.tools.build:gradle:2.2.0'
     }
 }
 
@@ -13,24 +13,27 @@ repositories {
     flatDir {
         dirs 'libs'
     }
-
+    mavenCentral()
     maven {
         url  "https://urbanairship.bintray.com/android"
     }
 }
 
 dependencies {
-    compile(name:'AdendaSDK', ext:'aar')
+    //compile(name:'AdendaSDK', ext:'aar')
+    compile project(':AdendaSDK')
+    compile 'com.google.code.gson:gson:2.4'
     compile 'com.urbanairship.android:urbanairship-sdk:7.1.3'
 }
 
 android {
-    compileSdkVersion 23
+    compileSdkVersion 24
     buildToolsVersion '23.0.3'
+    enforceUniquePackageName = false
 
     defaultConfig {
-        minSdkVersion 10
-        targetSdkVersion 23
+        minSdkVersion 11
+        targetSdkVersion 24
     }
 
     compileOptions {
