--- a/UrbanAirshipPlugin/build.gradle
+++ b/UrbanAirshipPlugin/build.gradle
@@ -5,7 +5,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.0'
+        classpath 'com.android.tools.build:gradle:2.2.2'
     }
 }
 
@@ -20,10 +20,10 @@ repositories {
 }
 
 dependencies {
-    //compile(name:'AdendaSDK', ext:'aar')
-    compile project(':AdendaSDK')
+    compile(name:'AdendaSDK', ext:'aar')
+    //compile project(':AdendaSDK')
     compile 'com.google.code.gson:gson:2.4'
-    compile 'com.urbanairship.android:urbanairship-sdk:7.1.3'
+    compile 'com.urbanairship.android:urbanairship-sdk:8.0.3'
 }
 
 android {
@@ -32,7 +32,7 @@ android {
     enforceUniquePackageName = false
 
     defaultConfig {
-        minSdkVersion 11
+        minSdkVersion 16
         targetSdkVersion 24
     }
 
